name:                hangman
version:             0.1.0.0
-- synopsis:         Playing hangman
-- description:
homepage:            https://github.com/championballer/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Shiv Kumar
maintainer:          shivk.it.16@nsit.net.in
copyright:           2020 Author Shiv Kumar
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       split
